Migration to Jakarta EE 10 and Spring 6.2